--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 @import url("https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap");
 
 .work-sans-font {
@@ -19,21 +20,32 @@
 .text-gray {
   color: #424242;
 }
-.bg-light{
-  background-color:rgba(255, 144, 14, 0.1) ;
-  /* padding-right: 240px;
-  padding-left: 240px; */
+.bg-light {
+  background-color: rgba(255, 144, 14, 0.1);
+}
+
+main{
+  max-width: 1440px;
+  margin: 0 auto;
+}
+main > section{
+
+  margin-top:100px;
+  margin-bottom: 100px;
+
+
 }
 /* Header Styles */
 .navbar {
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
-  
+  max-width: 1440px;
+  margin: 0 auto;
 }
 
-.brand{
+.brand {
   font-weight: 700;
-  font-size: 2.0rem;
+  font-size: 2rem;
 }
 
 .nav-item {
@@ -45,41 +57,121 @@
   font-weight: 500;
 }
 
-/* .banna{
+.banner{
   max-width: 1440px;
   margin: 0 auto;
-} */
+}
 
-.banner-container{
+.banner-container {
   max-width: 850px;
   margin: 0 auto;
   text-align: center;
 }
-.banner-img{
- max-width: 850px;
- max-height: 700px;
- align-items: center;
- padding-top: 20px;
- padding-left: 350px;
- padding-bottom: 20px;
- 
- 
+.banner-img {
+  width: 100%;
+  align-items: center;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  
+
 }
 
-.banner-title{
+.banner-title {
   margin-bottom: 0px;
   font-weight: 700;
   font-size: 3.8rem;
 }
 
-.primery-btn{
+.primery-btn {
+  background-color: #ff900e;
+  color: white;
+  padding: 20px 25px;
+  border-radius: 8px;
+  border: none;
+  font-size: 1.25rem;
+  font-weight: 600;
+}
 
-max-width: 150px;
-background-color: #FF900E;
-color: white;
-padding: 25px;
-border-radius: 8px;
-border: none;
-font-weight: 700;
+.primery-btn:hover {
+  background-color: white;
+  border: 1px solid #ff900e;
+  color: black;
+}
+/* Teams and Feature */
+.Teams{
+  align-items: center;
+}
+
+.team-img-cont{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+}
+
+.our-features{
+  margin-left: 120px;
+  max-width: 520px;
+}
+
+#quick-list{
+  color: #727272; 
+  font-weight: 600;
+}
+#feau{
+  color: #ff900e;
+}
+
+.feature-title{
+  font-size: 2.80rem;
+  margin-bottom: 0;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media screen and (max-width: 576px) {
+  .navbar,
+  .nav-link,
+  .Teams {
+    flex-direction: column;
+  }
+
+  .nav-item {
+    margin-right: 10px;
+    /* margin-bottom: 10px; */
+  }
+
+  .team-img-cont{
+    grid-template-columns: repeat(1,1fr);
+  }
+
+  .our-features{
+    margin-left: 20px;
+  }
+}
+
+@media screen and (min-width: 576px) and (max-width:992px) {
+.teams{
+  flex-direction: column;
+}  
+.our-features{
+  margin-left: 50px auto;
+}
 
 }
